--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <h1>{{title}}</h1>
-<app-students></app-students>
+
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/students">Students</a>
+</nav>
+
+<router-outlet></router-outlet>
 <app-messages></app-messages>
