--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,11 +1,8 @@
-
 <h2>My Students</h2>
   <ul class="students">
-    <li *ngFor="let student of students"
-    [class.selected]="student === selectedStudent"
-    (click)="onSelect(student)">
-      <span class="badge">{{student.id}}</span> {{student.name}}
+    <li *ngFor="let student of students"   >
+     
+     
+        <span class="badge">{{student.id}}</span> {{student.name}}
     </li>
   </ul>
-
-<app-student-detail [student]="selectedStudent"></app-student-detail>
