--- a/src/app/student-detail/student-detail.component.html
+++ b/src/app/student-detail/student-detail.component.html
@@ -1,19 +1,11 @@
 <div *ngIf="student">
-
-    <h2>{{student.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{student.id}}</div>
-    <div><span>email: </span>{{student.email}}</div>
-    <div><span>date of birth: </span>{{student.dob}}</div>
-    <div>
-      <label for="student-name">Student name: </label>
-      <input id="student-name" [(ngModel)]="student.name" placeholder="name">
-      
-    </div>
-  
+  <h2>{{student.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{student.id}}</div>
+  <div><span>age: </span>{{student.age}}</div>
+  <div>
+    <label for="student-name">student name: </label>
+    <input id="student-name" [(ngModel)]="student.name" placeholder="student name" />
   </div>
-
-        
-
-
-      
-<button (click)="goBack()">go back</button>
+  <button (click)="goBack()">go back</button>
+  <button (click)="goDelete()">remove</button>
+</div>
