--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,8 +1,8 @@
 <h2>My Students</h2>
-  <ul class="students">
-    <li *ngFor="let student of students"   >
-     
-     
-        <span class="badge">{{student.id}}</span> {{student.name}}
-    </li>
-  </ul>
+<ul class="students">
+  <li *ngFor="let student of students">
+    <a routerLink="/detail/{{student.id}}">
+      <span class="badge">{{student.id}}</span> {{student.name}}
+    </a>
+  </li>
+</ul>
