--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/students">Students</a>
+    <a routerLink="/add">Add</a>
 </nav>
 
 <router-outlet></router-outlet>
