--- a/src/app/student-detail/student-detail.component.html
+++ b/src/app/student-detail/student-detail.component.html
@@ -2,6 +2,7 @@
   <h2>{{student.name | uppercase}} Details</h2>
   <div><span>id: </span>{{student.id}}</div>
   <div><span>age: </span>{{student.age}}</div>
+  <div><span>email: </span>{{student.email}}</div>
   <div>
     <label for="student-name">student name: </label>
     <input id="student-name" [(ngModel)]="student.name" placeholder="student name" />
