calendar kind of working

--- a/src/app/modaldistributer/modaldistributer.component.html
+++ b/src/app/modaldistributer/modaldistributer.component.html
@@ -20,13 +20,20 @@
       <input id="email" type="text" formControlName="email">
     </div>
 
-    <div>
+    <!-- <div>
       <label for="dob">
         Date of birth
       </label>
       <input id="dob" type="text" formControlName="dob">
-    </div>
+    </div> -->
 
+    <div class="p-field p-col-12 p-md-4">
+      <label for="dateformat">Date of birth</label>
+      <p-calendar [(ngModel)]="date2" dateFormat="mm-dd-yy" inputId="dateformat" [ngModelOptions]="{standalone: true}">
+      </p-calendar>
+
+      <p>{{date2 | json }} </p>
+    </div>
 
     <button class="button" type="submit">Submit</button>
 
