--- a/src/app/modaldistributer/modaldistributer.component.html
+++ b/src/app/modaldistributer/modaldistributer.component.html
@@ -20,40 +20,10 @@
       <input id="email" type="text" formControlName="email">
     </div>
 
-    <!-- <div>
-      <label for="dob">
-        Date of birth
-      </label>
-      <input id="dob" type="text" formControlName="dob">
-    </div> -->
-
+    <!--PRIMENG component-->
     <div class="p-field p-col-12 p-md-4">
       <label for="dateformat">Date of birth</label>
-
-      <!-- <p-calendar 
-
-      [(ngModel)]="date2" 
-      dateFormat="mm-dd-yy" 
-      
-      inputId="dateformat" 
-      [ngModelOptions]="{standalone: true}"
-    
-      >
-
-      </p-calendar> -->
-
-      <p-calendar 
-
-      [(ngModel)]="date2" 
-      dateFormat="yy-mm-dd" 
-      
-      inputId="dateformat" 
-      [ngModelOptions]="{standalone: true}"
-      dataType="string"
-      >
-
-      </p-calendar>
-
+      <p-calendar [(ngModel)]="date2" dateFormat="yy-mm-dd" inputId="dateformat" [ngModelOptions]="{standalone: true}" dataType="string"></p-calendar>
       <p>{{date2 | json }} </p>
     </div>
 
